# embutils

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE.txt  README.md  license  pyproject.toml  readme.md  requirements.txt  setup.py  tasks.py
.github/workflows/: ci.yml  push.yml
docs/: conf.py  index.rst  requirements.txt
docs/_source/: embutils.repo.binary.rst  embutils.repo.build.rst  embutils.repo.rst  embutils.repo.version.rst  embutils.rst  embutils.serial.core.frame_stream.rst  embutils.serial.core.rst  embutils.serial.core.serial_device.rst  embutils.serial.core.serial_interface.rst  embutils.serial.data.frame.rst  embutils.serial.data.rst  embutils.serial.device.rst  embutils.serial.interface.rst  embutils.serial.rst  embutils.serial.stream.rst  embutils.utils.binary.rst  embutils.utils.bytes.rst  embutils.utils.cobs.rst  embutils.utils.common.rst  embutils.utils.crc.rst  embutils.utils.enum.rst  embutils.utils.env.rst  embutils.utils.events.rst  embutils.utils.logger.rst  embutils.utils.math.rst  embutils.utils.parsed.rst  embutils.utils.rst  embutils.utils.serialized.rst  embutils.utils.service.rst  embutils.utils.stream.rst  embutils.utils.subprocess.rst  embutils.utils.threading.rst  embutils.utils.time.rst  embutils.utils.usb_id.rst  embutils.utils.venv.rst  embutils.utils.version.rst  modules.rst
docs/sources/: embutils.rst  embutils.utils.path.rst  embutils.utils.rst
embutils/: __init__.py  version.py
embutils/examples/: __init__.py  simple_frame.py
embutils/repo/: __init__.py  binary.py  build.py  version.py  version_template.h
embutils/repo/templates/: template_version_c.h
embutils/serial/: __init__.py  device.py  interface.py  stream.py
embutils/serial/core/: __init__.py  frame_stream.py  serial_device.py  serial_interface.py
embutils/serial/data/: frame.py
embutils/serial_process/: __init__.py  serial_device.py
embutils/serial_process/core/: __init__.py  frame_stream.py  serial_device.py
embutils/serial_process/data/: __init__.py  frame.py
embutils/utils/: __init__.py  binary.py  bytes.py  cobs.py  common.py  crc.py  enum.py  env.py  events.py  keylogger.py  logger.py  math.py  parsed.py  path.py  serial.py  serialized.py  service.py  stream.py  subprocess.py  threading.py  time.py  usb_id.py  venv.py  version.py
embutils/utils/base/: __init__.py  bytes.py  events.py  mac.py  threading.py
embutils/utils/check/: __init__.py  crc.py
embutils/utils/common/: __init__.py  bytes.py  enum.py  events.py  kb_input.py  logger.py  mac.py  path.py  serialized.py  singleton.py  threading.py  time.py  usb_id.py
embutils/utils/crypto/: __init__.py  aes.py
embutils/utils/files/: __init__.py  binary.py  binary_file.py  path.py
embutils/utils/framing/: __init__.py  cobs.py
examples/: ex_frame.py  ex_serial_scan.py  example_serial.py  serial_scanner.py  simple_frame.py  stream_setup.py
scripts/: __init__.py  develop.py  poetry.py
test/: test_bytes.py  test_cobs.py  test_crc.py  test_file.py  test_mac.py
test/serial/: test_frame.py  test_frame_interface.py  test_frame_stream.py  test_serial_scanner.py
test/serial_process/: test_frame.py  test_frame_stream.py
test/utils/: test_bytes.py  test_cobs.py  test_crc.py  test_file_binary.py  test_kb_input.py  test_mac.py
tests/: __init__.py  test_build_binary.py  test_build_version.py  test_bytes.py  test_cobs.py  test_crc.py  test_example.py  test_frame.py  test_frame_interface.py  test_frame_stream.py  test_serial_frame_stream.py  test_serial_interface.py  test_serial_stream.py  test_utils_binary.py  test_utils_bytes.py  test_utils_cobs.py  test_utils_crc.py  test_utils_enum.py  test_utils_math.py  test_utils_parsed.py  test_utils_path.py  test_utils_serialized.py  test_utils_subprocess.py  test_utils_threading.py  test_utils_version.py
tests/serial/: test_frame.py  test_frame_interface.py  test_frame_stream.py
tests/utils/: ex_keylogger.py  kb_input.py  test_bytes.py  test_cobs.py  test_crc.py  test_file_binary.py
